force-app/main/default/objects/NI_Project_Backlog__c/NI_Project_Backlog__c.object-meta.xml
<CustomObject>
    <description>Updated 12/19/2020 per NICC-047197:  Changed Object Label to &quot;AH Project Backlog&quot;
Corporate Systems related projects that are submitted to IT, and executed by the IT Business Systems Team.</description>
    <label>AH Project Backlog</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AH Project Backlog</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>