force-app/main/default/objects/NI_Project_Backlog__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related account for this request.  This field is used for Development Requests</description>
    <inlineHelpText>The related account for this request.  This field is used for Development Requests</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>NI_Project_Backlog</relationshipName>
    <type>Lookup</type>
</CustomField>