force-app/main/default/objects/NI_Project_Backlog__c/fields/Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours__c</fullName>
    <label>Actual LOE (Project)</label>
    <summarizedField>NI_Project_Backlog_Tasks__c.Hours__c</summarizedField>
    <summaryForeignKey>NI_Project_Backlog_Tasks__c.NI_Project_Backlog_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>