force-app/main/default/objects/NI_Project_Backlog__c/fields/Actual_Hours_Dev__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours_Dev__c</fullName>
    <label>Task Hours (Development)</label>
    <summarizedField>NI_Project_Backlog_Tasks__c.Hours__c</summarizedField>
    <summaryFilterItems>
        <field>NI_Project_Backlog_Tasks__c.Project_Phase__c</field>
        <operation>equals</operation>
        <value>Development</value>
    </summaryFilterItems>
    <summaryForeignKey>NI_Project_Backlog_Tasks__c.NI_Project_Backlog_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>