force-app/main/default/objects/NI_Project_Backlog__c/fields/Affected_Objects__c.field-meta.xml
<CustomField>
    <fullName>Affected_Objects__c</fullName>
    <label>Affected Objects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Object_List</valueSetName>
    </valueSet>
</CustomField>