force-app/main/default/objects/NI_Project_Backlog__c/fields/Annual_Hours_Saved_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Annual_Hours_Saved_Confidence__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <description>NICC-046276
Confidence level in the specified number of annual hours saved</description>
    <inlineHelpText>Confidence level in the specified number of annual hours saved</inlineHelpText>
    <label>Annual Efficiencies Savings Confidence %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>