force-app/main/default/objects/NI_Project_Backlog__c/fields/Annual_Revenue_Increase_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Increase_Confidence__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <description>NICC-046276
Confidence level that this project will generate the specified annual revenue increase</description>
    <inlineHelpText>Confidence level that this project will generate the specified annual revenue increase</inlineHelpText>
    <label>Annual Revenue Increase Confidence %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>