force-app/main/default/objects/NI_Project_Backlog__c/fields/Apex_Classes_To_Change__c.field-meta.xml
<CustomField>
    <fullName>Apex_Classes_To_Change__c</fullName>
    <description>NICC-023424 
The Apex Classes that will be changed as part of this Change Request</description>
    <inlineHelpText>The Apex Classes that will be changed as part of this Change Request. This field must be updated if the Change Type contains &quot;Change Existing Apex Class&quot;</inlineHelpText>
    <label>Apex Classes To Change</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Apex_Classes</valueSetName>
    </valueSet>
</CustomField>