force-app/main/default/objects/NI_Project_Backlog__c/fields/Appeal_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Request_Status__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <description>NICC-052448
The status of the appeal request when an appeal is submitted.  This set to &quot;Pending Review&quot; when a request is initially submitted.</description>
    <inlineHelpText>The status of the appeal request when an appeal is submitted.  This set to &quot;Pending Review&quot; when a request is initially submitted.  This field is updated by the internal project governance board</inlineHelpText>
    <label>Appeal Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>