force-app/main/default/objects/NI_Project_Backlog__c/fields/Appeal_Requested__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Requested__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>NICC-052448
Originally created for projects with the Internal Project record type.  This field is automatically checked when a user submits an appeal request using the Appeal Request custom button.</description>
    <inlineHelpText>This field is automatically checked when a user submits an appeal request using the Appeal Request button on the project page layout.</inlineHelpText>
    <label>Appeal Requested</label>
    <type>Checkbox</type>
</CustomField>