force-app/main/default/objects/NI_Project_Backlog__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <businessOwnerUser>dmerrill@newmarketinc.com.sbfull</businessOwnerUser>
    <defaultValue>false</defaultValue>
    <description>NICC-055369</description>
    <inlineHelpText>Shows if an Internal Project has been approved. Used in validation rules on AH Project Backlog and Project Backlog Workstream to prevent unauthorized users from updating Internal Projects after they have been approved.</inlineHelpText>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>