force-app/main/default/objects/NI_Project_Backlog__c/fields/Basis_for_Annual_Savings__c.field-meta.xml
<CustomField>
    <fullName>Basis_for_Annual_Savings__c</fullName>
    <description>Salesforce.com Change Request: NICC-016642</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Basis for Annual Savings</label>
    <type>TextArea</type>
</CustomField>