force-app/main/default/objects/NI_Project_Backlog__c/fields/BS_Project_Sponser__c.field-meta.xml
<CustomField>
    <fullName>BS_Project_Sponser__c</fullName>
    <description>NICC-035205</description>
    <formula>Business_Systems_Project__r.Sponsor__r.FirstName &amp; &quot; &quot; &amp;  Business_Systems_Project__r.Sponsor__r.LastName</formula>
    <inlineHelpText>The Sponsor of the related Business Systems Project</inlineHelpText>
    <label>BS Project Sponser</label>
    <type>Text</type>
</CustomField>