force-app/main/default/objects/NI_Project_Backlog__c/fields/Business_Systems_Project__c.field-meta.xml
<CustomField>
    <fullName>Business_Systems_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-035205</description>
    <inlineHelpText>The Business Systems record that is related to this Commercial Operations project</inlineHelpText>
    <label>Business Systems Project</label>
    <referenceTo>NI_Project_Backlog__c</referenceTo>
    <relationshipName>NI_Project_Backlog1</relationshipName>
    <type>Lookup</type>
</CustomField>