force-app/main/default/objects/NI_Project_Backlog__c/fields/CBS_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>CBS_Reviewed_Date__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <description>NICC-047617

This field is used by the Corporate Business Systems Team for Internal Projects and Business Systems Projects. This field is updated by the CBS Team with the date/time they have reviewed and sized a project</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is used by the Corporate Business Systems Team for Internal Projects and Business Systems Projects. This field is updated by the CBS Team with the date/time they have reviewed and sized a project</inlineHelpText>
    <label>CBS Reviewed Date</label>
    <type>DateTime</type>
</CustomField>