force-app/main/default/objects/NI_Project_Backlog__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <description>Salesforce.com Change Request: NICC-016753</description>
    <label>Change Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add New Custom Setting</fullName>
            </value>
            <value>
                <fullName>Add New Field</fullName>
            </value>
            <value>
                <fullName>Add New Object</fullName>
            </value>
            <value>
                <fullName>Add New Public Group</fullName>
            </value>
            <value>
                <fullName>Add New Validation Rule</fullName>
            </value>
            <value>
                <fullName>Add New Visualforce Page</fullName>
            </value>
            <value>
                <fullName>Add New Workflow Rule</fullName>
            </value>
            <value>
                <fullName>Apex &amp; Visualforce</fullName>
            </value>
            <value>
                <fullName>Assignment Rules Change</fullName>
            </value>
            <value>
                <fullName>Change Existing Apex Class</fullName>
            </value>
            <value>
                <fullName>Change Existing Apex Trigger</fullName>
            </value>
            <value>
                <fullName>Change Existing Custom Setting</fullName>
            </value>
            <value>
                <fullName>Change Existing Field</fullName>
            </value>
            <value>
                <fullName>Change Existing Object</fullName>
            </value>
            <value>
                <fullName>Change Existing Profile</fullName>
            </value>
            <value>
                <fullName>Change Existing Public Group</fullName>
            </value>
            <value>
                <fullName>Change Existing Validation Rule</fullName>
            </value>
            <value>
                <fullName>Change Existing Visualforce Page</fullName>
            </value>
            <value>
                <fullName>Change Existing Workflow Rule</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Data Modification</fullName>
            </value>
            <value>
                <fullName>Delete Existing Field</fullName>
            </value>
            <value>
                <fullName>Delete Existing Object</fullName>
            </value>
            <value>
                <fullName>Delete Existing Public Group</fullName>
            </value>
            <value>
                <fullName>Install New Application</fullName>
            </value>
            <value>
                <fullName>New Apex Class</fullName>
            </value>
            <value>
                <fullName>New Apex Trigger</fullName>
            </value>
            <value>
                <fullName>Page Layout Change</fullName>
            </value>
            <value>
                <fullName>Uninstall Existing Application</fullName>
            </value>
            <value>
                <fullName>Upgrade Existing Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>