force-app/main/default/objects/NI_Project_Backlog__c/fields/Child_Project_Remaining_LOE_hrs__c.field-meta.xml
<CustomField>
    <fullName>Child_Project_Remaining_LOE_hrs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Remaining LOE (Child Projects)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>