force-app/main/default/objects/NI_Project_Backlog__c/fields/Child_Project_Task_Hours_Design__c.field-meta.xml
<CustomField>
    <fullName>Child_Project_Task_Hours_Design__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Child Project Task Hours (Design)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>