force-app/main/default/objects/NI_Project_Backlog__c/fields/Created_by_Intake_Wizard__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Intake_Wizard__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>NICC-047617

This field is automatically check for Internal Project records that are created by the &quot;Create Internal Project AH Project Backlog Record&quot; Flow. It is used for reporting on user adoption of the project intake wizard</description>
    <inlineHelpText>This field is automatically check for Internal Project records that are created by the Internal Project Intake Wizard</inlineHelpText>
    <label>Created by Intake Wizard</label>
    <type>Checkbox</type>
</CustomField>