force-app/main/default/objects/NI_Project_Backlog__c/fields/Custom_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Custom_Record_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is used for &apos;Clone w/task&apos;.  Please don&apos;t update or enter new value.
(blank when new project is created)</inlineHelpText>
    <label>Custom Record Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>