force-app/main/default/objects/NI_Project_Backlog__c/fields/Customer_Experience_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Customer_Experience_Improvements__c</fullName>
    <description>NICC-044411

The specific customer experience areas that this project will improve</description>
    <inlineHelpText>The specific customer experience areas that this project will improve</inlineHelpText>
    <label>Customer Experience Improvements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Improve NPS</fullName>
            </value>
            <value>
                <fullName>Improve Renewal Rate</fullName>
            </value>
            <value>
                <fullName>Improve Customer Collaboration</fullName>
            </value>
            <value>
                <fullName>Improve Customer Self-Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>