force-app/main/default/objects/NI_Project_Backlog__c/fields/Customer_Segments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segments__c</fullName>
    <description>Who is this solution intended to reach?</description>
    <inlineHelpText>Who is this solution intended to reach?</inlineHelpText>
    <label>Customer Segments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer&apos;s Customer</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>