force-app/main/default/objects/NI_Project_Backlog__c/fields/Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Dependencies__c</fullName>
    <description>NICC-032249, created for Commercial Operations. Used to track project dependencies</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Denote any project dependencies</inlineHelpText>
    <label>Dependencies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>