force-app/main/default/objects/NI_Project_Backlog__c/fields/Design_Hours__c.field-meta.xml
<CustomField>
    <fullName>Design_Hours__c</fullName>
    <formula>Actual_Hours_Design__c +  Child_Project_Task_Hours_Design__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Design Hours for Project</inlineHelpText>
    <label>Design Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>