force-app/main/default/objects/NI_Project_Backlog__c/fields/Development_Hours__c.field-meta.xml
<CustomField>
    <fullName>Development_Hours__c</fullName>
    <formula>Actual_Hours_Dev__c +  Child_Project_Task_Hours_Development__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Development Hours For Project</inlineHelpText>
    <label>Development Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>