force-app/main/default/objects/NI_Project_Backlog__c/fields/Development_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Development_Sandbox__c</fullName>
    <description>NICC-028375. Applies to Business Systems record type.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The origin sandbox for the change set that will be deployed to SBFULL.</inlineHelpText>
    <label>Development Sandbox</label>
    <length>20</length>
    <type>Text</type>
</CustomField>