force-app/main/default/objects/NI_Project_Backlog__c/fields/Duration_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Duration_On_Hold__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <description>NICC-043998
Number of days that the project was on hold because resources were redirected to other tasks.</description>
    <inlineHelpText>Number of days that the project was on hold because resources were redirected to other tasks.</inlineHelpText>
    <label>Days On Hold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>