force-app/main/default/objects/NI_Project_Backlog__c/fields/Estimated_Annual_Revenue_Increase__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Revenue_Increase__c</fullName>
    <description>NICC-044048
This field is used to prioritize the Corporate Business Systems project backlog.</description>
    <inlineHelpText>This field is used to prioritize the Corporate Business Systems project backlog.</inlineHelpText>
    <label>Estimated Annual Revenue Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>