force-app/main/default/objects/NI_Project_Backlog__c/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <description>Estimated cost to create this solution</description>
    <inlineHelpText>Estimated cost to create this solution</inlineHelpText>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>