force-app/main/default/objects/NI_Project_Backlog__c/fields/Estimated_Duration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration__c</fullName>
    <label>Estimated Duration (working days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>