force-app/main/default/objects/NI_Project_Backlog__c/fields/Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours__c</fullName>
    <description>Total Estimated Hours For Project</description>
    <formula>Task_Level_LOE__c +  Child_Project_Estimated_LOE_hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Estimated Hours For Project</inlineHelpText>
    <label>Estimated Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>