force-app/main/default/objects/NI_Project_Backlog__c/fields/Estimated_Total_Net_Project_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Net_Project_Value__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <description>NICC-046276</description>
    <formula>(Estimated_First_Year_Benefit__c * 3)  -  Estimated_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Estimated First Year Benefit multiplied by 3 minus the Estimated Cost</inlineHelpText>
    <label>Estimated Total Net Project Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>