force-app/main/default/objects/NI_Project_Backlog__c/fields/First_Year_Cost_Reduction__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Cost_Reduction__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <description>NICC-046276
Estimated first year cost reduction that this project will generate</description>
    <inlineHelpText>Estimated first year cost reduction that this project will generate</inlineHelpText>
    <label>First Year Cost Reduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>