force-app/main/default/objects/NI_Project_Backlog__c/fields/First_Year_Efficiencies_Savings_Cost__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Efficiencies_Savings_Cost__c</fullName>
    <label>First Year Efficiencies Savings Cost</label>
    <summarizedField>AH_Project_Backlog_Workstreams__c.Annual_Efficiencies_Saving_Cost_Weighted__c</summarizedField>
    <summaryForeignKey>AH_Project_Backlog_Workstreams__c.NI_Project_Backlog__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>