force-app/main/default/objects/NI_Project_Backlog__c/fields/First_Year_Revenue_Increase__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Revenue_Increase__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <description>NICC-046276
The Annual Revenue Increase Confidence % * Estimated Annual Revenue Increase. If this project is related to a product line/solution domain, then the calculation factors in the gross margin % for that product line. This field is automatically calculated.</description>
    <inlineHelpText>The Annual Revenue Increase Confidence % * Estimated Annual Revenue Increase. If this project is related to a product line/solution domain, then the calculation factors in the gross margin % for that product line. This field is automatically calculated.</inlineHelpText>
    <label>First Year Annual Revenue Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>