force-app/main/default/objects/NI_Project_Backlog__c/fields/Forecasted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Revenue__c</fullName>
    <description>Revenue forecast for first year.</description>
    <inlineHelpText>Revenue forecast for first year.</inlineHelpText>
    <label>Forecasted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>