force-app/main/default/objects/NI_Project_Backlog__c/fields/Include_in_Cybage_DSR__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Cybage_DSR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-031598. For use with Business Systems team projects.</description>
    <inlineHelpText>Should be checked if project includes tasks for Cybage resources.</inlineHelpText>
    <label>Include in Cybage DSR</label>
    <type>Checkbox</type>
</CustomField>