force-app/main/default/objects/NI_Project_Backlog__c/fields/Invoke_Rollups__c.field-meta.xml
<CustomField>
    <fullName>Invoke_Rollups__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if rollup trigger to execute or not</inlineHelpText>
    <label>Invoke Rollups</label>
    <type>Checkbox</type>
</CustomField>