force-app/main/default/objects/NI_Project_Backlog__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <businessOwnerGroup>DEPT_Business_Systems</businessOwnerGroup>
    <description>UPDATED 11/30/2020 - changed length from 2 to 3
NICC-046276
Gross margin for Hospitality Products.  This field is automatically updated when the Solution Domain field is populated on the Project Backlog record</description>
    <inlineHelpText>Gross margin for Hospitality Products.  This field is automatically updated when the Solution Domain field is populated on the Project Backlog record</inlineHelpText>
    <label>Margin %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>