force-app/main/default/objects/NI_Project_Backlog__c/fields/Marketing_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Strategy__c</fullName>
    <description>Product Management Only - how will this solution be marketed</description>
    <inlineHelpText>Product Management Only - how will this solution be marketed</inlineHelpText>
    <label>Marketing Strategy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer&apos;s Customer</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>New Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>