force-app/main/default/objects/NI_Project_Backlog__c/fields/Master_Project__c.field-meta.xml
<CustomField>
    <fullName>Master_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce.com Change Request: NICC-010757

We have a need to create a field for &quot;Master Project&quot;on the NI Project Backlog Object that will allow IT to create a Parent Backlog record with child backlog project records</description>
    <inlineHelpText>The Master or Parent Backlog Project that this Project is related to</inlineHelpText>
    <label>Master Project</label>
    <referenceTo>NI_Project_Backlog__c</referenceTo>
    <relationshipName>NI_Project_Backlog</relationshipName>
    <type>Lookup</type>
</CustomField>