force-app/main/default/objects/NI_Project_Backlog__c/fields/MSD_Ticket__c.field-meta.xml
<CustomField>
    <fullName>MSD_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to MSD Ticket number.  NICC 055600</description>
    <inlineHelpText>Lookup field to MSD Ticket number.</inlineHelpText>
    <label>MSD Ticket</label>
    <referenceTo>MSD_Ticket__c</referenceTo>
    <relationshipLabel>AH Project Backlog</relationshipLabel>
    <relationshipName>AH_Project_Backlog</relationshipName>
    <type>Lookup</type>
</CustomField>