force-app/main/default/objects/NI_Project_Backlog__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <businessOwnerUser>dmerrill@newmarketinc.com</businessOwnerUser>
    <description>NICC-043841 &amp; NICC 043999 Process Improvement team updates</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Notation related to this record.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>