force-app/main/default/objects/NI_Project_Backlog__c/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Brief explanation of why the project is currently blocked or why resources were redirected</inlineHelpText>
    <label>On Hold Reason(s)</label>
    <type>TextArea</type>
</CustomField>