force-app/main/default/objects/NI_Project_Backlog__c/fields/On_Hold_Status__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Status__c</fullName>
    <description>Used to help track cumulative &quot;On Hold&quot; time for each specific On Hold status.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>On Hold Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>