force-app/main/default/objects/NI_Project_Backlog__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related opportunity for this request.  This is used for Development Requests</description>
    <inlineHelpText>The related opportunity for this request.  This is used for Development Requests</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>NI_Project_Backlog</relationshipName>
    <type>Lookup</type>
</CustomField>