force-app/main/default/objects/NI_Project_Backlog__c/fields/Other_KPI_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_KPI_Description__c</fullName>
    <description>NICC-043352</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indicate the other KPI</inlineHelpText>
    <label>Other KPI Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>